# transcribe-api

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/api/: transcription.py
app/storage/: __init__.py  interface.py  s3_storage.py
app/transcription/: __init__.py  handler.py  interface.py  whisperx_service.py
tests/: conftest.py  test_api.py  test_transcription_interface.py
