[project]
name = "transcripter-api"
version = "0.1.0"
description = "API for transcribing audio and video files using WhisperX"
requires-python = ">=3.10"
authors = [
    {name = "Your Name"}
]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.109.0"
python-multipart = ">=0.0.9"
uvicorn = ">=0.27.0"
moviepy = ">=1.0.3"
onnxruntime = ">=1.19.2"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
numpy = "<2.0"
torch = {version = ">=2.0.0+cu118", source = "torch"}
torchvision = {version = ">=0.15.0+cu118", source = "torch"}
torchaudio = {version = ">=2.0.0+cu118", source = "torch"}
whisperx = "^3.3.1"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.5"
httpx = ">=0.26.0"
pytest-cov = ">=4.1.0"
